--- a/src/templates/HomeTemplate/HomeTemplate.scss
+++ b/src/templates/HomeTemplate/HomeTemplate.scss
@@ -77,3 +77,7 @@
   transform: scale(1.2); /* Slightly enlarge the icon */
   color: #ff9900; /* Change the color on hover */
 }
+
+.ant-layout-sider {
+  height: auto !important;
+}
