--- a/src/templates/HomeTemplate/HomeTemplate.scss
+++ b/src/templates/HomeTemplate/HomeTemplate.scss
@@ -36,6 +36,33 @@
   box-shadow: 0 0 0 2px #ff9900 !important;
 }
 
+// button
+:where(.css-dev-only-do-not-override-qnu6hi).ant-btn-primary {
+  background: #ff9900 !important;
+}
+
+// hover rangepicker
+:where(.css-dev-only-do-not-override-qnu6hi).ant-picker-outlined:hover {
+  border-color: #ff9900 !important;
+}
+
+// hover select
+:where(.css-dev-only-do-not-override-qnu6hi).ant-select-outlined:not(
+    .ant-select-disabled
+  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover
+  .ant-select-selector {
+  border-color: #ff9900 !important;
+}
+
+// hover datepicker
+:where(.css-dev-only-do-not-override-qnu6hi).ant-picker-outlined:focus,
+:where(.css-dev-only-do-not-override-qnu6hi).ant-picker-outlined:focus-within {
+  border-color: #ff9900 !important;
+}
+:where(.css-dev-only-do-not-override-qnu6hi).ant-picker-range
+  .ant-picker-active-bar {
+  background: #ec7211 !important;
+}
 .demo-logo-verticals {
   display: flex;
   justify-content: center;
